--- a/custom_components/solarman/inverter_definitions/sofar_g3hyd.yaml
+++ b/custom_components/solarman/inverter_definitions/sofar_g3hyd.yaml
@@ -34,6 +34,56 @@ parameters:
 
   - group: Inverter
     items:
+      - name: "Inverter mode"
+        class: ""
+        state_class: "measurement"
+        uom: ""
+        scale: 1
+        rule: 1
+        registers: [ 0x1110 ]
+        isstr: true
+        lookup:
+          - key: 0
+            value: "Self-generating and self-consumption mode"
+          - key: 1
+            value: "time-sharing tariff mode"
+          - key: 2
+            value: "Timed charging and discharging mode"
+          - key: 3
+            value: "Passive mode"
+          - key: 4
+            value: "Peak-shaving mode"
+        icon: 'mdi:wrench'
+
+      - name: "Language"
+        class: ""
+        state_class: "measurement"
+        uom: ""
+        scale: 1
+        rule: 1
+        registers: [ 0x1034 ]
+        isstr: true
+        lookup:
+          - key: 0
+            value: "中文"
+          - key: 1
+            value: "English"
+          - key: 2
+            value: "Italiano"
+          - key: 10
+            value: "Polski"
+          - key: 9
+            value: "Suomi"
+          - key: 8
+            value: "Español"
+          - key: 3
+            value: "Deutsch"
+          - key: 4
+            value: "Français"
+          - key: 14
+            value: "čeština"
+        icon: 'mdi:wrench'
+
       - name: "Inverter status"
         class: ""
         state_class: "measurement"
