--- a/custom_components/solarman/inverter_definitions/sofar_g3hyd.yaml
+++ b/custom_components/solarman/inverter_definitions/sofar_g3hyd.yaml
@@ -17,6 +17,9 @@ requests:
   - start: 0x0584 # dc
     end: 0x0589
     mb_functioncode: 0x03
+  - start: 0x05C4 # dc total
+    end: 0x05C4
+    mb_functioncode: 0x03
   - start: 0x0604 # battery 1
     end: 0x060A # end of first battery, last battery (8th) ends in 0x063A
     mb_functioncode: 0x03
@@ -311,6 +314,14 @@ parameters:
         scale: 10
         rule: 1
         registers: [ 0x0589 ]
+        icon: 'mdi:solar-power'
+      - name: "PV Total Power"
+        class: "power"
+        state_class: "measurement"
+        uom: "W"
+        scale: 100
+        rule: 1
+        registers: [ 0x05C4 ]
         icon: 'mdi:solar-power'
 
   - group: Battery
